[gd_scene load_steps=35 format=4 uid="uid://040iln4r6icu"]

[ext_resource type="Texture2D" uid="uid://mvgkrnayxjlf" path="res://assets/misc/square.png" id="1_injro"]
[ext_resource type="Script" uid="uid://bg8wn553memmb" path="res://scripts/dayFour/d4_bedroom.gd" id="1_smwkx"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="2_smwkx"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="3_c1d8e"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="4_s5uhs"]
[ext_resource type="PackedScene" uid="uid://lyewe0q5cjnt" path="res://scenes/Objects/bed.tscn" id="4_xussd"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="5_iwwf2"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="5_wqhel"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="6_ivwm8"]
[ext_resource type="PackedScene" uid="uid://i08cixlwo7qb" path="res://scenes/Objects/bedsideCabinet.tscn" id="6_kfirv"]
[ext_resource type="PackedScene" uid="uid://dx8tl06100qlm" path="res://scenes/interact_indicator.tscn" id="7_s5uhs"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="7_tu4vo"]
[ext_resource type="Texture2D" uid="uid://qhcs6stv71ts" path="res://assets/objects/carpet.png" id="8_iwwf2"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="10_tu4vo"]
[ext_resource type="Texture2D" uid="uid://b82wipn7s8aq5" path="res://assets/objects/bedroom_table.png" id="11_8bguy"]
[ext_resource type="PackedScene" uid="uid://bc38krii08k1g" path="res://scenes/Objects/closet_d4.tscn" id="11_c1d8e"]
[ext_resource type="Texture2D" uid="uid://jdo75bmqq2qp" path="res://assets/objects/bedroom_chair.png" id="12_rbooi"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="13_m50ij"]
[ext_resource type="Texture2D" uid="uid://bs7cxyqisn674" path="res://scenes/Days/DayThree/d3.tres" id="14_xa663"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="15_uo3qx"]
[ext_resource type="PackedScene" uid="uid://banhcwdrm7u2h" path="res://scenes/Objects/theBox.tscn" id="17_c1d8e"]

[sub_resource type="Resource" id="Resource_kfirv"]
script = ExtResource("6_ivwm8")
text = "*it was my fault."
text_speed = 10.0
text_sound = ExtResource("7_tu4vo")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bguy"]
size = Vector2(26, 7)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kd4do"]
polygon = PackedVector2Array(80, 16, 86, 16, 86, -21, -6, -21, -6, 54, 48, 54, 48, 48, 0, 48, 0, 0, 80, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pt4xg"]
polygon = PackedVector2Array(64, 48, 80, 48, 80, 32, 86, 32, 86, 54, 64, 54)

[sub_resource type="Gradient" id="Gradient_i04c0"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5j82n"]
gradient = SubResource("Gradient_i04c0")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvkxv"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyc4y"]
size = Vector2(8, 10)

[sub_resource type="Curve" id="Curve_ufs44"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_dsoqk"]
width = 2048
curve = SubResource("Curve_ufs44")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fksab"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(38, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_dsoqk")
alpha_curve = ExtResource("14_xa663")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63rrv"]
size = Vector2(20, 7)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s1dtc"]
light_mode = 1

[node name="D4Bedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_smwkx")

[node name="BlackScreen" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Sprite2D" type="Sprite2D" parent="BlackScreen"]
modulate = Color(0, 0, 0, 0)
position = Vector2(160.5, 89.99999)
scale = Vector2(327.00003, 188)
texture = ExtResource("1_injro")
metadata/_edit_lock_ = true

[node name="blameDialog" parent="." instance=ExtResource("4_s5uhs")]
position = Vector2(57, 40)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("5_iwwf2")]([SubResource("Resource_kfirv")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="blameDialog"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_8bguy")

[node name="Player" parent="." instance=ExtResource("2_smwkx")]
position = Vector2(40, 23)
speed = 42.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 19)

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_kd4do")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_pt4xg")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAP//AAADAAEAAAABAP//AAADAAEAAAACAP//AAADAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAD/////AAACAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAAAAAAEAP7/AAADAAAAAAADAP7/AAADAAAAAAACAP7/AAADAAAAAAABAP7/AAADAAAAAAAAAP7/AAADAAAAAAD///7/AAACAAAAAAD//wAAAAACAAIAAAAFAAAAAAAEAAMAAAAFAAIAAAABAAMAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAADAAQAAAACAAMAAAAAAAQAAAAEAAMAAAABAAQAAAAFAAMAAAAEAAQAAAADAAMAAAAFAAMAAAAFAAEAAAAFAAEAAAA=")
tile_set = ExtResource("3_c1d8e")
metadata/_edit_lock_ = true

[node name="bed" parent="." instance=ExtResource("4_xussd")]
position = Vector2(8, -2)

[node name="Radiator" parent="." instance=ExtResource("5_wqhel")]
position = Vector2(2, 27)

[node name="bedsideCabinet" parent="." instance=ExtResource("6_kfirv")]
position = Vector2(23, 1)

[node name="InteractIndicator" parent="." instance=ExtResource("7_s5uhs")]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -12)

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(41, 27)
texture = ExtResource("8_iwwf2")

[node name="balconyLight" type="PointLight2D" parent="."]
position = Vector2(96, 24)
scale = Vector2(1, 1.0124278)
color = Color(1, 1, 0.8156863, 1)
energy = 0.4
shadow_enabled = true
texture = ExtResource("10_tu4vo")
metadata/_edit_lock_ = true

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.54725987, 0.5333227, 0.58319277, 1)

[node name="closet" parent="." instance=ExtResource("11_c1d8e")]
position = Vector2(71, -3)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(41, 16)
scale = Vector2(0.28688523, 0.2622951)
energy = 0.38
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_5j82n")

[node name="BedroomTable" type="Sprite2D" parent="."]
position = Vector2(45, 1)
texture = ExtResource("11_8bguy")

[node name="BedroomChair" type="Sprite2D" parent="."]
position = Vector2(45, 7)
texture = ExtResource("12_rbooi")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(45, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_qvkxv")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_cyc4y")

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(40, 15)
amount = 25
texture = ExtResource("13_m50ij")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_fksab")
metadata/_edit_lock_ = true

[node name="toLivingroom" parent="." instance=ExtResource("15_uo3qx")]
position = Vector2(56, 55)
wanted_room_path = "res://scenes/Days/DayFour/d4_livingroom.tscn"
wanted_player_pos = Vector2(24, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLivingroom"]
shape = SubResource("RectangleShape2D_63rrv")

[node name="toBalcony" parent="." instance=ExtResource("15_uo3qx")]
position = Vector2(87, 24)
rotation = -1.5707964
wanted_room_path = "res://scenes/Days/DayFour/d4_balcony.tscn"
wanted_player_pos = Vector2(14, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBalcony"]
shape = SubResource("RectangleShape2D_63rrv")

[node name="whiteFlash" type="Sprite2D" parent="."]
visible = false
z_index = -3
material = SubResource("CanvasItemMaterial_s1dtc")
position = Vector2(36.999996, 17)
scale = Vector2(350, 208.49998)
texture = ExtResource("1_injro")

[node name="TheBox" parent="." instance=ExtResource("17_c1d8e")]
position = Vector2(74, 40)
